--- a/views/products/list.html
+++ b/views/products/list.html
@@ -34,11 +34,11 @@
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Price</th>
-            <th scope="col">Action</th>
+            <th scope="col" colspan="2">Action</th>
           </tr>
         </thead>
         <tbody>
-         {product}
+         {products}
         </tbody>
       </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
